--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/develop/menu.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/develop/menu.html
@@ -61,8 +61,8 @@
                         <tr>
                             <th>上级模块：</th>
                             <td>
-                                <div class="input-group" data-control="picker" data-control-type="ModulePicker">
-                                    <input type="text" name="selectParentModule" class="form-control" />
+                                <div class="input-group" data-picker="../picker/modulepicker.html">
+                                    <input type="text" class="form-control" name="selectParentModule" />
                                     <input type="hidden" name="parentId" />
                                 </div>
                             </td>
@@ -110,8 +110,8 @@
                             </td>
                             <th>所属模块：</th>
                             <td>
-                                <div class="input-group" data-control="picker" data-control-type="ModulePicker">
-                                    <input type="text" name="moduleName" class="form-control" />
+                                <div class="input-group" data-picker="../picker/modulepicker.html">
+                                    <input type="text" class="form-control" name="moduleName" />
                                     <input type="hidden" name="moduleId" />
                                 </div>
                             </td>
