--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layoutflow.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/shared/layoutflow.html
@@ -48,7 +48,7 @@
     <script type="text/javascript" src="../../js/framework/adminSuite.js"></script>
     <script type="text/javascript">
         BitAdmin.IsLogin(function () {
-            BitPage.LoadContent();
+            bitPage.loadContent();
         });
 
         $.adminSetup({
