--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/flowdesign.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/flowdesign.html
@@ -235,7 +235,7 @@
 
 
     <script type="text/javascript">
-        var flowId = BitPage.GetQueryString("fm");
+        var flowId = url.query("fm");
 
         //审核类型下拉框事件
         function AuditNormChange() {
