--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/user.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/system/user.html
@@ -93,8 +93,8 @@
                         <tr>
                             <th>所属部门：</th>
                             <td>
-                                <div class="input-group" data-control="picker" data-control-type="OUPicker" data-control-name="DepartmentPicker" data-param="single:true">
-                                    <input type="text" name="departmentName" class="form-control required" placeholder="部门" />
+                                <div class="input-group" data-picker="../picker/oupicker.html" data-param="single:true">
+                                    <input type="text" class="form-control" name="departmentName" placeholder="部门" />
                                     <input type="hidden" name="departmentId" />
                                 </div>
                             </td>
