--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/bind.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/account/bind.html
@@ -69,7 +69,7 @@
                     $("#spanmsg").text("请输入登录密码");
                     return;
                 }
-                var openId = BitPage.GetQueryString("openid");
+                var openId = url.query("openid");
                 $.showLoading();
                 $.ajax({
                     url: "../../auth/binduser",
