--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/ExampleThree.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/workflowexample/ExampleThree.html
@@ -38,10 +38,10 @@
 <script type="text/javascript">
     $(function () {
         //url取值
-        var url = BitPage.GetQueryString("page");
-        var orderId = BitPage.GetQueryString('exampleId', url);
-        var taskUserId = BitPage.GetQueryString('taskUserId', url);
-        var state = BitPage.GetQueryString('state', url);
+        var pageUrl = url.query("page");
+        var orderId = url.query('exampleId', pageUrl);
+        var taskUserId = url.query('taskUserId', pageUrl);
+        var state = url.query('state', pageUrl);
 
         //表单套件初始化
         var formSuite = $("#exampleModal").generalForm()
@@ -73,19 +73,19 @@
             .close(function (result) {
                 switch (state) {
                     case 'ToDo':
-                        BitPage.Redirect("/Workbench/ToDoList", null, "ToDoList", 1);
+                        goPage("/Workbench/ToDoList", null, "ToDoList", 1);
                         break;
                     case 'Done':
-                        BitPage.Redirect("/Workbench/DoneList", null, "DoneList", 1);
+                        goPage("/Workbench/DoneList", null, "DoneList", 1);
                         break;
                     case 'ToRead':
-                        BitPage.Redirect("/Workbench/ToReadList", null, "ToReadList", 1);
+                        goPage("/Workbench/ToReadList", null, "ToReadList", 1);
                         break;
                     case 'ReadEnd':
-                        BitPage.Redirect("/Workbench/ReadEndList", null, "ReadEndList", 1);
+                        goPage("/Workbench/ReadEndList", null, "ReadEndList", 1);
                         break;
                     default:
-                        BitPage.Redirect("/WorkflowExample/Example", null, "WorkflowExample");
+                        goPage("/WorkflowExample/Example", null, "WorkflowExample");
                         break;
                 }
             })
