--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/readme.html
@@ -13,11 +13,13 @@
 <div class="box">
     <div class="box-body" style="padding-left:20px;">
         <h2 style="margin-top:10px;"><span style="font-weight:bold;">BitAdminCore介绍</span></h2>
-        <p>BitAdminCore是基于jQuery，Bootstrap，AdminLTE，MUI（APP），Light7(手机端) 的 NET Core开发框架，目前仅支持mssql数据库。</p>
-        <p>项目地址：<a href="https://github.com/chenyinxin/cookiecutter-bitadmin-core" target="_blank">https://github.com/chenyinxin/cookiecutter-bitadmin-core</a></p>
+        <p>BitAdminCore是基于jQuery，Bootstrap，AdminLTE的 NET Core开发框架，使用SQL Server数据库。</p>
+        <p>BitAdminCore为没有自主开发框架的小团队，提供快速项目搭建及开发能力。让你的团队从零开始在一周之内可以完成一个小型系统的开发。</p>
+        <p>源码地址：<a href="https://github.com/chenyinxin/cookiecutter-bitadmin-core" target="_blank">https://github.com/chenyinxin/cookiecutter-bitadmin-core</a></p>
+        <p>博客地址：<a href="https://www.cnblogs.com/chenyinxin/" target="_blank">https://www.cnblogs.com/chenyinxin/</a></p>
         <h4><span style="font-weight:bold;">架构思想：</span></h4>
-        <p>定位管理应用程序快速开发能力，以程序易读性为核心。</p>
-        <p>采用布局与逻辑分离、前端后端分离的思路，降低耦合度。</p>
+        <p>定位于后台管理模块开发，以管理员对数据增删改查为核心。数据量在几千万以内，在线用户数在1000以内的应用。</p>
+        <p>以程序易读性为核心，采用布局与逻辑分离、前端后端分离的思路，降低耦合度。</p>
         <h4><span style="font-weight:bold;">规范约定：</span></h4>
         <p>使用EF Core与Sql语句混合开发模式；使用骆驼命名法，例：userName。</p>
         <p></p>
@@ -47,7 +49,6 @@
         <h4><span style="font-weight:bold;">技术集成：</span></h4>
         <p>二维码生成</p>
         <p>Swagger</p>
-        <p>定时服务</p>
         <h4><span style="font-weight:bold;">服务集成：</span></h4>
         <p>微信支付</p>
         <p>个推平台</p>
@@ -59,12 +60,6 @@
         <h4><span style="font-weight:bold;">应用首页：</span></h4>
         <p>基础布局：菜单、个人设置。</p>
 
-        <h2><span style="font-weight:bold;">BitAdminCore框架（APP）</span></h2>
-        <h4><span style="font-weight:bold;">登录页面：</span></h4>
-        <p>提供基础的用户名、密码、短信登录。</p>
-        <p>提供三方平台登录：微信、QQ、微博</p>
-        <h4><span style="font-weight:bold;">应用首页：</span></h4>
-        <p>基础布局：菜单、个人设置。</p>
 
         <h2><span style="font-weight:bold;">BitAdminCore框架（手机）</span></h2>
         <h4><span style="font-weight:bold;">登录页面：</span></h4>
@@ -72,11 +67,12 @@
         <h4><span style="font-weight:bold;">应用首页：</span></h4>
         <p>基础布局：菜单、个人设置。</p>
 
-        <h2><span style="font-weight:bold;">BitAdminCore快速原型</span></h2>
-        <h4><span style="font-weight:bold;">Prototyping服务：</span></h4>
-        <p>提供快速原型制作，包括模板，数据源。</p>
-        <h4><span style="font-weight:bold;">Prototyping模板：</span></h4>
-        <p>只有一个增删查改。</p>
+        <h2><span style="font-weight:bold;">BitAdminCore文件服务</span></h2>
+        <p>在负载环境下，需要将上传的附件保存到文件服务器。</p>
+
+        <h2><span style="font-weight:bold;">BitAdminCore定时服务</span></h2>
+        <p>提供Windows后台服务框架以及服务管理界面，简单开发一个定时服务。</p>
+
     </div>
 </div>
 <!--cnzz统计代码，可以移除，开始-->
