--- a/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/ad.html
+++ b/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/wwwroot/pages/home/ad.html
@@ -16,22 +16,14 @@
 <body>
     <div class="col-md-6">
         <div class="row">
-            <h4>准备在这里放个广告，知道怎么弄的介绍介绍</h4>
-        </div>
-        <div class="row">
-            右下角的弹窗也换成广告，如何?
-        </div>
-        <div class="row">
-            <h4>或者放个二维码，让大家支持一下</h4>
+            <h4>准备放个二维码，让大家支持一下。</h4>
         </div>
         <div class="row">
             有你的支持，才是坚持的动力。
         </div>
     </div>
     <!--cnzz统计代码，可以移除，开始-->
-    <div style="display:none;">
-        <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1263497164'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1263497164%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
-    </div>
+    <script>var _hmt = _hmt || []; (function () { var hm = document.createElement("script"); hm.src = "https://hm.baidu.com/hm.js?67d9c965e616fb773b85f279d372b0c4"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hm, s); })();</script>
     <!--cnzz统计代码，可以移除，结束-->
 </body>
 </html>
